[gd_scene load_steps=25 format=3 uid="uid://0cdht6xykwu7"]

[ext_resource type="Script" path="res://Scripts/Mobs/spawn_manager.gd" id="1_bvj0y"]
[ext_resource type="PackedScene" uid="uid://mmq7d6i1fgjc" path="res://Scenes/Assets/Mobs/Minion.tscn" id="3_1jksw"]
[ext_resource type="PackedScene" uid="uid://jw65hqu1mseq" path="res://Scenes/Assets/Mobs/Models/Ghost.tscn" id="4_6rao7"]
[ext_resource type="PackedScene" uid="uid://b77fxsgmsjpkr" path="res://Scenes/Assets/Mobs/Models/Orc.tscn" id="4_e1iku"]
[ext_resource type="Script" path="res://Scripts/GameUIManager.gd" id="4_v33no"]
[ext_resource type="PackedScene" uid="uid://b01khnim0q3yw" path="res://Scenes/Assets/Mobs/Models/Zombie.tscn" id="5_xy08n"]
[ext_resource type="PackedScene" uid="uid://c7irlw1101kwc" path="res://Scenes/Assets/Mobs/Models/Skeleton.tscn" id="7_vue2w"]
[ext_resource type="PackedScene" uid="uid://bcrmooe1y1vwx" path="res://Scenes/Assets/Mobs/Models/Pirate Captain.tscn" id="8_qup3b"]
[ext_resource type="PackedScene" uid="uid://bhq0a6rcwxn30" path="res://Scenes/Assets/Mobs/Models/Skeleton Mage.tscn" id="8_ykaen"]
[ext_resource type="PackedScene" uid="uid://w7h88cq200j0" path="res://Scenes/Assets/Mobs/Models/Anne.tscn" id="9_hehkg"]
[ext_resource type="Resource" uid="uid://oyuxohoufxsw" path="res://Resources/Buildings/TowerUpgrade1.tres" id="11_f53kw"]
[ext_resource type="Resource" uid="uid://ykdul4kvw8e1" path="res://Resources/Buildings/TowerUpgrade2.tres" id="12_0g4kj"]
[ext_resource type="Resource" uid="uid://cidmuwjbcpc23" path="res://Resources/Buildings/TowerUpgrade3.tres" id="13_gf0j7"]
[ext_resource type="Resource" uid="uid://dy04sfsyyklrp" path="res://Resources/Buildings/BarrackUpgrade1.tres" id="14_uilx5"]
[ext_resource type="Resource" uid="uid://bahhljppsrjqt" path="res://Resources/Buildings/BarrackUpgrade2.tres" id="15_1v8fr"]
[ext_resource type="Resource" uid="uid://b58aod210i8k0" path="res://Resources/Buildings/BarrackUpgrade3.tres" id="16_kxjxp"]
[ext_resource type="Resource" uid="uid://crbrseowu7pr8" path="res://Resources/Buildings/BarrackUpgrade4.tres" id="17_b5mna"]
[ext_resource type="Resource" uid="uid://n5by2pepsaqp" path="res://Resources/Buildings/NexusUpgrade1.tres" id="18_tqmii"]
[ext_resource type="Resource" uid="uid://cn47imoio6f8q" path="res://Resources/Buildings/NexusUpgrade2.tres" id="19_jbwph"]
[ext_resource type="Resource" uid="uid://36yq7273dnak" path="res://Resources/Buildings/NexusUpgrade3.tres" id="20_vm82y"]
[ext_resource type="Resource" uid="uid://otju3di3o3sl" path="res://Resources/Buildings/NexusUpgrade4.tres" id="21_qna0q"]

[sub_resource type="LabelSettings" id="LabelSettings_tnijv"]
font_size = 18

[sub_resource type="LabelSettings" id="LabelSettings_e6r6v"]
font_size = 26
outline_size = 2
outline_color = Color(0, 0, 0, 1)
shadow_size = 2
shadow_color = Color(0.00392157, 0.00392157, 0.00392157, 0.470588)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sk5jk"]
bg_color = Color(0.113725, 0.113725, 0.113725, 1)

[node name="UIController" type="Node3D"]

[node name="SpawnManager" type="Node3D" parent="."]
script = ExtResource("1_bvj0y")
minionScene = ExtResource("3_1jksw")
minion_models = [ExtResource("4_6rao7"), ExtResource("4_e1iku"), ExtResource("5_xy08n"), ExtResource("7_vue2w"), ExtResource("7_vue2w"), ExtResource("8_ykaen"), ExtResource("8_qup3b"), ExtResource("9_hehkg")]

[node name="GameUIManager" type="Node3D" parent="." node_paths=PackedStringArray("upgrade_info_panel")]
script = ExtResource("4_v33no")
upgrade_info_panel = NodePath("HUD/UpgradesUI/BackgroundPanel/Upgrade info")
tower_upgrades_array = [ExtResource("11_f53kw"), ExtResource("12_0g4kj"), ExtResource("13_gf0j7")]
barrack_upgrades_array = [ExtResource("14_uilx5"), ExtResource("15_1v8fr"), ExtResource("16_kxjxp"), ExtResource("17_b5mna")]
nexus_upgrades_array = [ExtResource("18_tqmii"), ExtResource("19_jbwph"), ExtResource("20_vm82y"), ExtResource("21_qna0q")]

[node name="HUD" type="Node2D" parent="GameUIManager"]

[node name="Labels" type="CanvasLayer" parent="GameUIManager/HUD"]

[node name="GoldLabel" type="Label" parent="GameUIManager/HUD/Labels"]
offset_top = 16.0
offset_right = 128.0
offset_bottom = 86.0
text = "gold label"
label_settings = SubResource("LabelSettings_tnijv")

[node name="TopMinions" type="Label" parent="GameUIManager/HUD/Labels"]
offset_left = 256.0
offset_top = 16.0
offset_right = 440.0
offset_bottom = 86.0
text = "top minions
top minions"
label_settings = SubResource("LabelSettings_tnijv")

[node name="MidMinions" type="Label" parent="GameUIManager/HUD/Labels"]
offset_left = 496.0
offset_top = 16.0
offset_right = 680.0
offset_bottom = 86.0
text = "mid minions
mid minions"
label_settings = SubResource("LabelSettings_tnijv")

[node name="BotMinions" type="Label" parent="GameUIManager/HUD/Labels"]
offset_left = 746.0
offset_top = 16.0
offset_right = 930.0
offset_bottom = 86.0
text = "bot minions
bot minions"
label_settings = SubResource("LabelSettings_tnijv")

[node name="UpgradesKey" type="Label" parent="GameUIManager/HUD/Labels"]
offset_left = 999.0
offset_top = 16.0
offset_right = 1130.0
offset_bottom = 67.0
text = "Upgrades - U key"

[node name="AIPanelKey" type="Label" parent="GameUIManager/HUD/Labels"]
offset_left = 1173.0
offset_top = 16.0
offset_right = 1321.0
offset_bottom = 67.0
text = "Bot AI Panel - F1 key"

[node name="UpgradesUI" type="CanvasLayer" parent="GameUIManager/HUD"]
layer = 2
visible = false

[node name="BackgroundPanel" type="Panel" parent="GameUIManager/HUD/UpgradesUI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -509.5
offset_top = 150.0
offset_right = 509.5
offset_bottom = 580.0
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="GameUIManager/HUD/UpgradesUI/BackgroundPanel"]
layout_mode = 0
offset_top = 60.0
offset_right = 1019.0
offset_bottom = 430.0

[node name="TowerUpgrades" type="VBoxContainer" parent="GameUIManager/HUD/UpgradesUI/BackgroundPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TopTower" type="Button" parent="GameUIManager/HUD/UpgradesUI/BackgroundPanel/HBoxContainer/TowerUpgrades"]
layout_mode = 2
size_flags_vertical = 3
text = "TOP TOWER UPGRADE TIER 1
COST - 50G
"

[node name="MidTower" type="Button" parent="GameUIManager/HUD/UpgradesUI/BackgroundPanel/HBoxContainer/TowerUpgrades"]
layout_mode = 2
size_flags_vertical = 3
text = "MID TOWER UPGRADE TIER 1
COST - 50G"

[node name="BotTower" type="Button" parent="GameUIManager/HUD/UpgradesUI/BackgroundPanel/HBoxContainer/TowerUpgrades"]
layout_mode = 2
size_flags_vertical = 3
text = "BOT TOWER UPGRADE TIER 1
COST - 50G"

[node name="BarrackUpgrades" type="VBoxContainer" parent="GameUIManager/HUD/UpgradesUI/BackgroundPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TopBarrack" type="Button" parent="GameUIManager/HUD/UpgradesUI/BackgroundPanel/HBoxContainer/BarrackUpgrades"]
layout_mode = 2
size_flags_vertical = 3
text = "TOP BARRACK UPGRADE TIER 1
COST - 50G"

[node name="MidBarrack" type="Button" parent="GameUIManager/HUD/UpgradesUI/BackgroundPanel/HBoxContainer/BarrackUpgrades"]
layout_mode = 2
size_flags_vertical = 3
text = "MID BARRACK UPGRADE TIER 1
COST - 50G"

[node name="BotBarrack" type="Button" parent="GameUIManager/HUD/UpgradesUI/BackgroundPanel/HBoxContainer/BarrackUpgrades"]
layout_mode = 2
size_flags_vertical = 3
text = "BOT BARRACK UPGRADE TIER 1
COST - 50G"

[node name="NexusUpgrades" type="VBoxContainer" parent="GameUIManager/HUD/UpgradesUI/BackgroundPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Nexus" type="Button" parent="GameUIManager/HUD/UpgradesUI/BackgroundPanel/HBoxContainer/NexusUpgrades"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "NEXUS UPGRADE TIER 1
COST - 50G"

[node name="Label" type="Label" parent="GameUIManager/HUD/UpgradesUI/BackgroundPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 55.0
grow_horizontal = 2
text = "Upgrades Menu"
label_settings = SubResource("LabelSettings_e6r6v")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ExitButton" type="Button" parent="GameUIManager/HUD/UpgradesUI/BackgroundPanel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -60.0
offset_bottom = 55.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 30
text = "X"

[node name="Upgrade info" type="Panel" parent="GameUIManager/HUD/UpgradesUI/BackgroundPanel"]
visible = false
layout_mode = 0
offset_left = -450.5
offset_top = -150.0
offset_right = -170.5
offset_bottom = 280.0
theme_override_styles/panel = SubResource("StyleBoxFlat_sk5jk")

[node name="Title" type="Label" parent="GameUIManager/HUD/UpgradesUI/BackgroundPanel/Upgrade info"]
layout_mode = 0
offset_right = 280.0
offset_bottom = 60.0
text = "[Building] upgrade tier [Tier]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Description" type="Label" parent="GameUIManager/HUD/UpgradesUI/BackgroundPanel/Upgrade info"]
layout_mode = 0
offset_top = 60.0
offset_right = 280.0
offset_bottom = 430.0
theme_override_font_sizes/font_size = 13
text = "PLACEHOLDER UPGRADE DESCRIPTION"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="WaveTimer" type="Timer" parent="."]
wait_time = 45.0

[node name="BlueMobTimer" type="Timer" parent="."]

[node name="RedMobTimer" type="Timer" parent="."]

[node name="StartDelayTimer" type="Timer" parent="."]
wait_time = 15.0
one_shot = true

[connection signal="mouse_entered" from="GameUIManager/HUD/UpgradesUI/BackgroundPanel/HBoxContainer/TowerUpgrades/TopTower" to="GameUIManager" method="_on_upgrade_button_mouse_entered" binds= ["tower", "top", 1]]
[connection signal="mouse_exited" from="GameUIManager/HUD/UpgradesUI/BackgroundPanel/HBoxContainer/TowerUpgrades/TopTower" to="GameUIManager" method="_on_upgrade_button_mouse_exited"]
[connection signal="pressed" from="GameUIManager/HUD/UpgradesUI/BackgroundPanel/HBoxContainer/TowerUpgrades/TopTower" to="GameUIManager" method="_on_upgrade_button_pressed" binds= ["tower", "top", 1]]
[connection signal="mouse_entered" from="GameUIManager/HUD/UpgradesUI/BackgroundPanel/HBoxContainer/TowerUpgrades/MidTower" to="GameUIManager" method="_on_upgrade_button_mouse_entered" binds= ["tower", "mid", 1]]
[connection signal="mouse_exited" from="GameUIManager/HUD/UpgradesUI/BackgroundPanel/HBoxContainer/TowerUpgrades/MidTower" to="GameUIManager" method="_on_upgrade_button_mouse_exited"]
[connection signal="pressed" from="GameUIManager/HUD/UpgradesUI/BackgroundPanel/HBoxContainer/TowerUpgrades/MidTower" to="GameUIManager" method="_on_upgrade_button_pressed" binds= ["tower", "mid", 1]]
[connection signal="mouse_entered" from="GameUIManager/HUD/UpgradesUI/BackgroundPanel/HBoxContainer/TowerUpgrades/BotTower" to="GameUIManager" method="_on_upgrade_button_mouse_entered" binds= ["tower", "bot", 1]]
[connection signal="mouse_exited" from="GameUIManager/HUD/UpgradesUI/BackgroundPanel/HBoxContainer/TowerUpgrades/BotTower" to="GameUIManager" method="_on_upgrade_button_mouse_exited"]
[connection signal="pressed" from="GameUIManager/HUD/UpgradesUI/BackgroundPanel/HBoxContainer/TowerUpgrades/BotTower" to="GameUIManager" method="_on_upgrade_button_pressed" binds= ["tower", "bot", 1]]
[connection signal="mouse_entered" from="GameUIManager/HUD/UpgradesUI/BackgroundPanel/HBoxContainer/BarrackUpgrades/TopBarrack" to="GameUIManager" method="_on_upgrade_button_mouse_entered" binds= ["barrack", "top", 1]]
[connection signal="mouse_exited" from="GameUIManager/HUD/UpgradesUI/BackgroundPanel/HBoxContainer/BarrackUpgrades/TopBarrack" to="GameUIManager" method="_on_upgrade_button_mouse_exited"]
[connection signal="pressed" from="GameUIManager/HUD/UpgradesUI/BackgroundPanel/HBoxContainer/BarrackUpgrades/TopBarrack" to="GameUIManager" method="_on_upgrade_button_pressed" binds= ["barrack", "top", 1]]
[connection signal="mouse_entered" from="GameUIManager/HUD/UpgradesUI/BackgroundPanel/HBoxContainer/BarrackUpgrades/MidBarrack" to="GameUIManager" method="_on_upgrade_button_mouse_entered" binds= ["barrack", "mid", 1]]
[connection signal="mouse_exited" from="GameUIManager/HUD/UpgradesUI/BackgroundPanel/HBoxContainer/BarrackUpgrades/MidBarrack" to="GameUIManager" method="_on_upgrade_button_mouse_exited"]
[connection signal="pressed" from="GameUIManager/HUD/UpgradesUI/BackgroundPanel/HBoxContainer/BarrackUpgrades/MidBarrack" to="GameUIManager" method="_on_upgrade_button_pressed" binds= ["barrack", "mid", 1]]
[connection signal="mouse_entered" from="GameUIManager/HUD/UpgradesUI/BackgroundPanel/HBoxContainer/BarrackUpgrades/BotBarrack" to="GameUIManager" method="_on_upgrade_button_mouse_entered" binds= ["barrack", "bot", 1]]
[connection signal="mouse_exited" from="GameUIManager/HUD/UpgradesUI/BackgroundPanel/HBoxContainer/BarrackUpgrades/BotBarrack" to="GameUIManager" method="_on_upgrade_button_mouse_exited"]
[connection signal="pressed" from="GameUIManager/HUD/UpgradesUI/BackgroundPanel/HBoxContainer/BarrackUpgrades/BotBarrack" to="GameUIManager" method="_on_upgrade_button_pressed" binds= ["barrack", "bot", 1]]
[connection signal="mouse_entered" from="GameUIManager/HUD/UpgradesUI/BackgroundPanel/HBoxContainer/NexusUpgrades/Nexus" to="GameUIManager" method="_on_upgrade_button_mouse_entered" binds= ["nexus", "none", 1]]
[connection signal="mouse_exited" from="GameUIManager/HUD/UpgradesUI/BackgroundPanel/HBoxContainer/NexusUpgrades/Nexus" to="GameUIManager" method="_on_upgrade_button_mouse_exited"]
[connection signal="pressed" from="GameUIManager/HUD/UpgradesUI/BackgroundPanel/HBoxContainer/NexusUpgrades/Nexus" to="GameUIManager" method="_on_upgrade_button_pressed" binds= ["nexus", "", 1]]
[connection signal="pressed" from="GameUIManager/HUD/UpgradesUI/BackgroundPanel/ExitButton" to="GameUIManager" method="_on_exit_button_pressed"]
[connection signal="timeout" from="WaveTimer" to="SpawnManager" method="_on_wave_timer_timeout"]
[connection signal="timeout" from="BlueMobTimer" to="SpawnManager" method="_on_blue_mob_timer_timeout"]
[connection signal="timeout" from="RedMobTimer" to="SpawnManager" method="_on_red_mob_timer_timeout"]
[connection signal="timeout" from="StartDelayTimer" to="SpawnManager" method="_on_start_delay_timer_timeout"]
